Storymap layout updates Added options for full-width and centered content Fixed column layout in intro Updated navigation fonts Updated intro fonts Removed gap between storymap and breadcrumbs

--- a/cmap-2017-theme/src/css/custom/widgets/_storymap.scss
+++ b/cmap-2017-theme/src/css/custom/widgets/_storymap.scss
@@ -49,33 +49,40 @@ $icon-nav-right-white: "\e91d";
 }
 
 #main-content.storymaplayout {
+	
     .portlet-content {
         padding: 0;
     }
+    
     @media screen and (max-width: 750px) {
         #main-content .portlet-content {
             padding: 0;
         }
     }
+    
     @media screen and (max-width: 400px) {
         #main-content .portlet-content {
             padding: 0;
         }
     }
-    .col-xs-16, .col-sm-16, .col-md-16, .col-lg-16, .col-xl-16 {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-    }
-    .col-md-16.portlet-column, .col-lg-16.portlet-column, .col-xl-16.portlet-column, .col-sm-16.portlet-column, .col-xs-16.portlet-column {
-        padding: 0 !important;
-    }
 }
 
 .storymaplayout {
+
+	/* make storymap flush with breadcrumbs */
+	margin-top: $unit * -2;
+	
     #map-container {
         height: 800px;
         position: relative;
     }
+    
+	/* make full-width content possible */
+    #column-1 {
+		&.portlet-column-only {
+			padding: 0;
+		}
+	}
 
     .story-map {
         height: 100%;
@@ -85,7 +92,6 @@ $icon-nav-right-white: "\e91d";
     .storymap-nav {
         background: $grey-blue;
         color: $dark-grey;
-        font-size: #{ $size-1 - 0.1em };
         margin: 0;
         padding: 1em 0;
 
@@ -110,29 +116,28 @@ $icon-nav-right-white: "\e91d";
         }
 
         .storymap-intro-container {
-            background: #a8bcc8;
+			@include section-padding();
+			background: #a8bcc8;
             margin: 0;
-            padding: 1em 0;
+            padding-bottom: 50px;
+            padding-top: 50px;
 
-            .storymap-title p {
-                color: #000;
-                font-family: $font-sans;
-                font-size: $size1;
+            .storymap-title {
+            	p {
+            		@extend .whitney-huge;
+                	color: #000;
+            	}
             }
 
             .storymap-info {
                 color: #000;
-                font-family: $font-serif;
-                font-size: #{ $size0 - 0.2em };
-                line-height: 1.5em;
-                margin-bottom: 2em;
+                padding-bottom: 25px;
             }
 
             .storymap-aside, .storymap-source {
-                color: $grey-blue;
-                font-size: #{ $size-1 - 0.1em };
-                line-height: 1.5em;
-                margin-bottom: 2em;
+                @extend .whitney-small;
+				color: $grey-blue;
+                padding-bottom: 25px;
             }
 
             .storymap-source {
@@ -141,24 +146,25 @@ $icon-nav-right-white: "\e91d";
         }
 
         .storymap-nav-container {
+        	@include section-padding();
             background: $grey-blue;
             margin: 0;
-            padding: 1em 0;
-            display: flex;
-            ul {
-                display: flex;
+            padding-bottom: 25px;
+            padding-top: 25px;
+            
+            .story-steps {
                 margin-bottom: 0;
                 max-width: none;
-            }
-            li {
-                list-style: none;
-                cursor: pointer;
-            }
 
+	            li {
+	                list-style: none;
+	                cursor: pointer;
+	            }
+            }
+            
             .story-step-title {
-                color: $light-grey;
-                font-size: #{ $size0 - 0.1em };
-                letter-spacing: 0.05em;
+		        @extend .whitney-normal__bold;
+				color: $light-grey;
                 margin-right: 1em;
                 text-transform: capitalize;
                 opacity: 0.5;
@@ -170,11 +176,12 @@ $icon-nav-right-white: "\e91d";
             }
 
             .view-map {
-                color: $off-white;
-                font-size: $size-1;
+		        @extend .whitney-small;
+				color: $off-white;
                 cursor: pointer;
                 background: none;
                 border: none;
+            	line-height: $variation;
 
                 .icon {
                     font-size: 18px;
@@ -202,6 +209,7 @@ $icon-nav-right-white: "\e91d";
                 }
             }
         }
+        
         .storymap-nav-container.mobile-storymap-nav {
             display: none;
             .story-step-title {
@@ -215,9 +223,11 @@ $icon-nav-right-white: "\e91d";
             flex-direction: column;
             max-width: 180px;
             text-align: right;
+            
             .btn {
                 margin-bottom: 10px;
             }
+            
             &.menu-show {
                 display: none;
             }
@@ -232,7 +242,7 @@ $icon-nav-right-white: "\e91d";
                 background: rgba(168, 188, 200, .5);
                 border: 2px solid $grey-blue;
                 border-radius: 21px;
-                color: $grey-blue; // font-size: 12px;
+                color: $grey-blue;
                 font-family: $font-sans;
                 font-size: $size-1;
                 font-weight: 600;
@@ -244,9 +254,11 @@ $icon-nav-right-white: "\e91d";
                     background: $grey-blue;
                 }
             }
+            
             .text-right {
                 margin: 20px 0 0 0;
             }
+            
             p {
                 max-width: none;
             }
@@ -268,46 +280,59 @@ $icon-nav-right-white: "\e91d";
     .story-step-content {
         display: none;
     }
+    
     @include tablet() {
         .storymap-section {
+        
             .storymap-nav-container.mobile-storymap-nav {
                 display: flex;
                 justify-content: space-between;
+                
                 .story-step-title {
                     color: $white;
                     font-size: $size1;
                 }
             }
+            
             .storymap-overlays-container{
                 .text-right{
                     margin: 0;
                 }
             }
+            
             .view-layers-button {
                 cursor: pointer;
             }
+            
             .layers-menu.menu-show {
                 display: flex;
                 flex-direction: column;
             }
         }
+        
         .story-interact.scroll-fixed .view-layers-button {
             margin-right: 15px;
         }
     }
 
     @include phone() {
+    
         .storymap-section {
+        
             .storymap-intro-container {
+            
                 .storymap-title, .storymap-info {
                     padding-left: 1em;
                 }
+                
                 .storymap-aside, .storymap-source {
                     font-size: $size0;
                 }
+                
                 .storymap-title {
                     font-size: $size2;
                 }
+                
                 .storymap-info {
                     font-size: $size0;
                     margin-top: 10px;
